# scraper

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  main.py
src/contrib/: Dockerfile  db_setup.py  init.sql  scraper.py
src/endpoints/: product.py
src/models/: product.py
src/repositories/: product.py
