[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Alfredo Rivera"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
sqlmodel = "^0.0.22"
uvicorn = "^0.32.1"
requests = "^2.32.3"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"
pydantic-settings = "^2.6.1"
playwright = "^1.49.0"
beautifulsoup4 = "^4.12.3"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"
flake8 = "^7.1.1"
mypy = "^1.13.0"
isort = "^5.13.2"
pytest-cov = "^6.0.0"
ipython = "^8.29.0"
nest-asyncio = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
